2002-01-28  Mattia Barbon  <mbarbon@users.sourceforge.net>

	* include/winuser.h (GWLP_*,DWLP_*): Add missing constants.
	(GetWindowLongPtr[AW], SetWindowLongPtr[AW]): Map them to
	{Get Set}WindowLong[AW], as in Win32 they are equivalent.
	(GetWindowLongPtr, SetWindowLongPtr): Add Unicode mappings.

2002-01-28  Danny Smith  <dannysmith@users.sourceforge.net>

	* lib/test.c: Include wsnetbs.h.

2002-01-28  Kai Henningsen  <kai-henningsen@users.sourceforge.net>

	* include/wsnetbs.h: New file.

2002-01-25  Earnie Boyd  <earnie@users.sf.net>

	* include/winnt.h: Remove merge conflict.

2002-01-25  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winnt.h (_TCHAR): Add typedefs.

2002-01-25  Tim Hughes  <tjh@delcam.com>

	* include/wininet.h (SECURITY_FLAG_IGNORE_*): Add missing
	defines.

2002-01-25  Andriy Palamarchuk  <apa3a@yahoo.com>

	* include/winsuser.h (ATF_AVAILABLE, SERKF_ACTIVE):
	Add defines.
	(LPACCESSTIMEOUT): Add typedef.

2002-01-24  Phillip Susi  <psusi@cfl.rr.com> 

	* include/commctrl.h: Add missing HDM_*,HDN_*,LVSICF_* defines.

2002-01-24  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/commctrl.h (HDITEM[AW]): Rename _HD_ITEM[AW] to
	_HDITEM[AW], with parallel changes to typedefs.	Use defines for
	backward compatability with old names. Update UNICODE mappings.
	(HDLAYOUT): Remove struct _HD_LAYOUT_XP.  Use new typedefs
	for struct _HD_LAYOUT and add defines for backward
	compatability with old names.
	(NMLISTVIEW): Rename _NM_LISTVIEW to tagNMLISTVIEW, with
	parallel chages to typedefs. Add defines for backward
	compatability with old names.
	(TCHITTESTINFO, IMAGELISTDRAWPARAMS): Fix _WIN32_IE guard.

2002-01-21  Robert Collins  <rbtcollins@hotmail.com>

	* include/winnt.h: Add missing MEM_ defines, and convert existing to 
	hex for readability.

2002-01-17  Marcus Geelnard  <marcus.geelnard@home.se>

	* include/winsuser.h (tagKBDLLHOOKSTRUCT): Define struct
	and typedefs.
	(SPI_SETSCREENSAVERRUNNING): Add define.